# log-lens

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  JSON_SCHEMA.md  PRE_COMMIT_CHECKLIST.md  README.md  ROADMAP.md  out.json  pyproject.toml  report.json  results.json
.github/: QUICK_START.md
.github/workflows/: ci.yml
assets/img/: log_lens_logo_v1.af
docs/: ARCHITECTURE.md  DEVELOPMENT.md  PROJECT_SUMMARY.md  index.html  log_lens.html  roadmap.md  search.js
log_lens/: __init__.py  cli.py  exporter.py  main.py  parser.py
src/log_lens/: __init__.py  cli.py  exporter.py  main.py  parser.py
src/log_lens/core/: reporter.py
src/log_lens/models/: log_entry.py
tests/: test_cli.py  test_parser.py
