[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "log-lens"
version = "0.4.0"
description = "Lightweight CLI for analyzing Apache/Nginx server logs"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "KnowOneActual", email = "your-email@example.com"}]
keywords = ["logs", "analysis", "cli", "server", "apache", "nginx"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich>=13.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
    "pre-commit",
]

[project.scripts]
log-lens = "log_lens.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/log_lens"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "integration: mark test as an integration test",
]

[project.urls]
Homepage = "https://github.com/KnowOneActual/log-lens"
Repository = "https://github.com/KnowOneActual/log-lens"
Changelog = "https://github.com/KnowOneActual/log-lens/blob/main/CHANGELOG.md"
