[tool.poetry]
name = "log-lens"
version = "0.4.0"
description = "Lightweight CLI for analyzing Apache/Nginx server logs"
authors = [{name = "KnowOneActual", email = "your-email@example.com"}]
readme = "README.md"
license = "MIT"
keywords = ["logs", "analysis", "cli", "server", "apache", "nginx"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
rich = ">=13.0.0"
click = ">=8.0.0"
pyyaml = ">=6.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
isort = "^5.13.0"
mypy = "^1.8.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ruff = "^0.2.0"
pre-commit = "^3.6.0"
pylint = "^3.0.0"

[tool.poetry.scripts]
log-lens = "log_lens.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"
markers = [
    "integration: mark test as an integration test",
]

[tool.ruff]
line-length = 100
target-version = "py38"
