[tool.poetry]
name = "log-lens"
version = "0.7.0"
description = "Lightweight CLI for analyzing Apache/Nginx server logs"
authors = ["KnowOneActual"]
readme = "README.md"
license = "MIT"
packages = [{include = "log_lens", from = "src"}]
keywords = ["logs", "analysis", "cli", "server", "apache", "nginx"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
rich = ">=13.0.0"
click = ">=8.0.0"
pyyaml = ">=6.0"
pydantic = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ruff = "^0.2.0"
pre-commit = "^3.6.0"
pylint = "^3.0.0"

[tool.poetry.scripts]
log-lens = "log_lens.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"
markers = [
    "integration: mark test as an integration test",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"] # Enforce Error, Pyflakes, and Isort rules

[tool.ruff.lint.isort]
known-first-party = ["log_lens"]